ex02: chore: Modify Form class to Abstract AForm Class

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -7,7 +7,10 @@ RESET	= \033[0m
 NAME = bureaucrat
 SRC =	main.cpp \
 		Bureaucrat.cpp \
-		Form.cpp
+		AForm.cpp \
+		ShrubberyCreationForm.hpp \
+		RobotomyRequestForm.hpp \
+		PresidentialPardonForm.hpp
 OBJ = $(SRC:.cpp=.o)
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++17
